# modern-cmake-cpp20

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build-archlinux.sh  build-with-clang.sh
cmake/: version.h.in
src/: core.cpp  core.h
utils/: CMakeLists.txt  use_asio.cpp  use_fmt.cpp  use_json.cpp  use_sml2.cpp  use_spdlog.cpp  use_url.cpp
